generated-tests/tests/snapshots/ts/test_generated_expression_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
value8;

AST:
(program
  (expression_statement
    (identifier value8)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value8",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 7,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
