generated-tests/tests/snapshots/ts/test_generated_flow_maybe_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const val1: ?string = null;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier val1)
      (type_annotation
        (flow_maybe_type
          (predefined_type)
        )
      )
      (null)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "val1",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
