generated-tests/tests/snapshots/ts/test_generated_for_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
for (let i1 = 0; i1 < arr1.length; i1++) { const item = arr1[i1]; }

AST:
(program
  (for_statement
    initializer: (lexical_declaration
      (variable_declarator
        name: (identifier "i1")
        value: (number "0")
      )
    )
    condition: (expression_statement
      (binary_expression
        left: (identifier "i1")
        right: (member_expression
          object: (identifier "arr1")
          property: (property_identifier "length")
        )
      )
    )
    increment: (update_expression
      argument: (identifier "i1")
    )
    body: (statement_block
      (lexical_declaration
        (variable_declarator
          name: (identifier "item")
          value: (subscript_expression
            object: (identifier "arr1")
            index: (identifier "i1")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i1",
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 12,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "item",
            position: Position {
                start_line: 1,
                start_column: 50,
                end_line: 1,
                end_column: 54,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "i1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 20,
            },
        },
        Usage {
            name: "arr1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 27,
            },
        },
        Usage {
            name: "length",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 28,
                end_line: 1,
                end_column: 34,
            },
        },
        Usage {
            name: "i1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 36,
                end_line: 1,
                end_column: 38,
            },
        },
        Usage {
            name: "arr1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 57,
                end_line: 1,
                end_column: 61,
            },
        },
        Usage {
            name: "i1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 62,
                end_line: 1,
                end_column: 64,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
