generated-tests/tests/snapshots/ts/test_generated_function_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const fn: (x: number) => string = (x) => x.toString();

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier fn)
      (type_annotation
        (function_type
          (formal_parameters
            (required_parameter
              (identifier x)
              (type_annotation
                (predefined_type)
              )
            )
          )
          (predefined_type)
        )
      )
      (arrow_function
        (formal_parameters
          (required_parameter
            (identifier x)
          )
        )
        (call_expression
          (member_expression
            (identifier x)
            (property_identifier)
          )
          (arguments)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "fn",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "x",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "x.toString()",
            kind: CallExpression,
            scope: None,
            start_line: 1,
            start_column: 42,
            end_line: 1,
            end_column: 54,
        },
        SerializableUsage {
            name: "x",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 42,
            end_line: 1,
            end_column: 43,
        },
        SerializableUsage {
            name: "toString",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 44,
            end_line: 1,
            end_column: 52,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
