generated-tests/tests/snapshots/ts/test_generated_generator_function_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
function* testFn2() { yield value9; }

AST:
(program
  (generator_function_declaration
    (identifier testFn2)
    (formal_parameters)
    (statement_block
      (expression_statement
        (yield_expression
          (identifier value9)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "testFn2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 11,
            end_line: 1,
            end_column: 18,
        },
        SerializableUsage {
            name: "value9",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 29,
            end_line: 1,
            end_column: 35,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
